@@ -60,6 +60,8 @@ Version 2.3.0
    - Added Erwin Poeze to contributors
    - Bugfix: Handling of message sequence numbers when using IMAP4 (thanks to
         Jan Outrata for providing a patch; this was debian bug #472080)
+   - Feature: Substituted getaddrinfo for deprecated gethostbyname; now IPv6
+        should be possible
 
 Version 2.2.10
  * Robert Sowada
